// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SurveyGeneralInformation renders correctly with all fields 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-5"
  >
    <div
      class="MuiBox-root MuiBox-root-6"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3"
      >
        General Information
      </h3>
      <button
        aria-label="Edit Survey General Information"
        class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
        tabindex="0"
        title="Edit Survey General Information"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.3125rem; height: 1.3125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Edit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <dl>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Survey Name
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            survey name
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Survey Timeline
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            October 10, 1998 - February 26, 2021
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Survey Lead
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            first last
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Focal Species
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            focal species 1
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Anciliary Species
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            ancillary species 1
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Permit
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            123 - Scientific
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Funding Sources
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            Funding Agency Blah | $ 100 | April 09, 2000 - May 10, 2000
          </dd>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-7"
          >
            <div
              class="MuiBox-root MuiBox-root-8"
            >
              <dt
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
              >
                Purpose
              </dt>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              survey purpose
            </p>
          </div>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`SurveyGeneralInformation renders correctly with no end date (only start date) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-1"
  >
    <div
      class="MuiBox-root MuiBox-root-2"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3"
      >
        General Information
      </h3>
      <button
        aria-label="Edit Survey General Information"
        class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
        tabindex="0"
        title="Edit Survey General Information"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.3125rem; height: 1.3125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Edit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <dl>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Survey Name
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            survey name
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Survey Timeline
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            <span>
              Start Date:
            </span>
             October 10, 1998
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Survey Lead
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            first last
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Focal Species
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            species 1
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Anciliary Species
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            ancillary species
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Permit
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            123 - Scientific
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Funding Sources
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            Funding Agency Blah | $ 100 | April 09, 2000 - May 10, 2000
          </dd>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-3"
          >
            <div
              class="MuiBox-root MuiBox-root-4"
            >
              <dt
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
              >
                Purpose
              </dt>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              survey purpose
            </p>
          </div>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
